--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,5 +21,7 @@
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %> 
-<%= link_to 'Pdf', url_for(@user.pdf) %>
+<%= link_to 'Back', users_path %>
+<% if @user.pdf.attached? %> 
+  <%= link_to 'Pdf', url_for(@user.pdf) %>
+<%end%>
