--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Users</h1>
 
-<table>
+<table class="table table-striped table-lg table-dark table-hover ">
   <thead>
     <tr>
       <th>Name</th>
@@ -20,12 +20,12 @@
         <td><%= user.school %></td>
         <td><%= user.college %></td>
         <td><%= user.passout %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= link_to 'Show', user, :class => 'btn btn-success btn-sm text-light' %></td>
+        <td><%= link_to 'Edit', edit_user_path(user), :class => 'btn btn-sm btn-success text-light' %></td>
         <% if user.pdf.attached? %>
-          <td><%= link_to 'Pdf', url_for(user.pdf) %></td>
+          <td><%= link_to 'Pdf', url_for(user.pdf) , :class => 'btn btn-success btn-sm text-light'%></td>
         <%end%>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } , :class => 'btn btn-danger btn-sm text-light'%></td>
       </tr>
     <% end %>
   </tbody>
@@ -33,4 +33,5 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path , :class => 'btn btn-success text-light'%>
+<%= link_to 'Sidekiq Dashboard', "/sidekiq" , :class => 'btn btn-success text-light'%>
